# JJ-s-E45-Geant4-simulation

./: .gitignore  .gitignore~  CMakeLists.txt  G4History.macro  README.md  build.sh  clean.sh  fieldmap  local_sync.sh  main.cc  repo_tidy.sh  test.root  vis.mac
.build/: CMakeCache.txt  G4HypTPC  G4HypTPC_dict.cxx  Makefile  cmake_install.cmake  install_manifest.txt  libG4HypTPC.rootmap  libG4HypTPC_rdict.pcm  module.modulemap
include/: ActionInitialization.hh  AnaManager.hh  AngDisGenerator.hh  BACHit.hh  BACSD.hh  BH2Hit.hh  BH2SD.hh  BVH_DHit.hh  BVH_D_SD.hh  BVH_UHit.hh  BVH_U_SD.hh  BeamMan.hh  ConfMan.hh  DCGeomMan.hh  DCGeomRecord.hh  DCGeomRecord.hh~  DetSizeMan.hh  DetectorConstruction.hh  DetectorID.hh  DetectorID.hh~  DiffCrossSection.hh  DiffCrossSectionMan.hh  EventAction.hh  FTOFHit.hh  FTOFSD.hh  FieldMap.hh  FuncName.hh  GeneratorHelper.hh  HTOFHit.hh  HTOFSD.hh  HistMan.hh  IncMan.hh  JamMan.hh  KVCHit.hh  KVCSD.hh  Kinema2Body.hh  Kinema3Body.hh  Kinema3Resonance.hh  Kinema4Body.hh  KinemaCM2Lab.hh  (+48 more)
linkdef/: LinkDef.h
root/: .gitignore  AutoDict_std__vector_TParticle_.cxx  AutoDict_vector_TParticle_.cxx  BH2&&SCH_fit_cut.txt  BH2&&SCH_tight_cut.txt  BH2_Hitpattern.C  BVH_3D.C  BVH_3D_C_ACLiC_dict.cxx  BVH_3D_C_ACLiC_linkdef.h  BVH_3D_C_ACLiC_map.in  BVH_3D_SCH.C  BVH_overlay_debug.C  HTOFHit.C  HTOF_2D.C  HTOF_2pi.C  HTOF_BH2.C  HTOF_Eff.C  HTOF_check.C  HTOF_final.C  ProbeBH2.C  Veto_3D.C  Veto_ratio.C  Veto_sum.C  beam_union_E45_BVH1_60mm_54.root_thr1.csv  binom_cp  binom_cp.cpp  bvh_d_plot1.C  calculate_trigger.C  check_segments.C  compare_veto_options.C  correlation.C  correlation_BH2.C  count_htof_trigger.C  draw_hits.C~  gen.dict.C  green_only_E45_overkill_54.root_thr1_vs_E45_BVH1_60mm_54.root_thr1.csv  hitpattern.C  plot_bvh_d.C  plot_bvh_d.C~  plot_correlation.C  (+8 more)
runmanager/: .gitignore  jobstat.py  kill.sh  monitor.py  run.py
src/: .gitignore  ActionInitialization.cc  AnaManager.cc  AngDisGenerator.cc  BACHit.cc  BACSD.cc  BH2Hit.cc  BH2SD.cc  BVH_DHit.cc  BVH_D_SD.cc  BVH_UHit.cc  BVH_U_SD.cc  BeamMan.cc  ConfMan.cc  DCGeomMan.cc  DCGeomRecord.cc  DetSizeMan.cc  DetectorConstruction.cc  DetectorConstructionE42.cc  Dict_rdict.pcm  DiffCrossSection.cc  DiffCrossSectionMan.cc  EventAction.cc  FTOFHit.cc  FTOFSD.cc  FieldMap.cc  GeneratorHelper.cc  HTOFHit.cc  HTOFSD.cc  HistMan.cc  IncMan.cc  JamMan.cc  KVCHit.cc  KVCSD.cc  Kinema2Body.cc  Kinema3Body.cc  Kinema3Resonance.cc  Kinema4Body.cc  KinemaFermi.cc  KinemaHWeakNonReso.cc  (+43 more)
(+95 files in other folders)
